--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,3 +42,42 @@ body {
     background-color: white;
     color: #EA5455
 }
+
+@media screen and (min-width: 768px) {
+    .producto {
+        margin: 1em 5%;
+        grid-template-columns: repeat(3, auto);
+        align-items: center;
+    }
+
+    .producto p:first-child{
+        grid-column: auto;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        background-image: url(../img/ropa-fondo.jpg);
+    }
+    .producto {
+        margin: 1em 20%;
+        grid-template-columns: repeat(2, 1fr) auto;
+        column-gap: 1em;
+        justify-items: start;
+    }
+
+    .producto p:first-child {
+        justify-self: end;
+        font-size: large;
+    }
+
+    .producto_boton {
+        cursor: pointer;
+        color: #002B5B;
+        font-size: 2.5em;
+    }
+
+    .producto_boton:hover {
+        color: #EA5455;
+    }
+}
