--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,24 @@ body {
     background-color: #E4DCCF;
 }
 
+a {
+    text-decoration: none;
+    color: #EA5455;
+    margin: 1em;
+    font-size: 1.5em;
+}
+
+.volver {
+    text-align: center;
+}
+
+ul {
+    list-style-type: none;
+    list-style-position: inside;
+    margin-top: 0;
+    padding: 0;
+}
+
 .encabezado {
     background-color: #EA5455;
     color: #E4DCCF;
@@ -43,6 +61,38 @@ body {
     color: #EA5455
 }
 
+article {
+    background-color: white;
+    margin: 1em;
+    padding: .5em;
+    text-align: center;
+    color: #002B5B;
+}
+
+h2 {
+    color: #EA5455;
+}
+
+img {
+    max-width: 80%;
+}
+
+article p:first-of-type {
+    font-weight: 700;
+}
+
+article p:last-of-type {
+    font-weight: 700;
+}
+
+.calificacion {
+    color: #817d76;
+}
+
+.marcado {
+    color: gold;
+}
+
 @media screen and (min-width: 768px) {
     .producto {
         margin: 1em 5%;
@@ -52,6 +102,35 @@ body {
 
     .producto p:first-child{
         grid-column: auto;
+    }
+
+    article {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        text-align: left;
+        justify-items: center;
+        align-items: start;
+        font-size: large;
+    }
+
+    article h2 {
+        grid-column: span 2;
+    }
+
+    article p {
+        margin: 0;
+    }
+
+    img {
+        grid-row-start: 2;
+        grid-row-end: 5;
+        max-height: 20em;
+    }
+
+    article ul {
+        grid-column: span 2;
+        margin: 0;
+        padding: 1em;
     }
 }
 
@@ -78,6 +157,20 @@ body {
     }
 
     .producto_boton:hover {
+        color: #EA5455;
+    }
+
+    article {
+        margin: 1em 20%;
+    }
+
+    a {
+        color: white;
+        font-weight: 700;
+        text-shadow: 2px 2px 1px black;
+    }
+
+    a:hover {
         color: #EA5455;
     }
 }
