--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,11 +40,14 @@ ul {
 .producto {
     margin: 1em;
     padding: .5em;
-    text-align: center;
     color: #002B5B;
     display: grid;
     grid-template-columns: repeat(2, auto);
     background-color: white;
+}
+
+.producto p {
+    margin: .5em 0;
 }
 
 .producto p:first-child {
@@ -87,6 +90,11 @@ article p:last-of-type {
 
 .calificacion {
     color: #817d76;
+    margin: 0 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
 }
 
 .marcado {
@@ -96,7 +104,7 @@ article p:last-of-type {
 @media screen and (min-width: 768px) {
     .producto {
         margin: 1em 5%;
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(2, 1fr) auto;
         align-items: center;
     }
 
@@ -104,7 +112,12 @@ article p:last-of-type {
         grid-column: auto;
     }
 
+    .producto_boton {
+        justify-self: end;
+    }
+
     article {
+        margin: 1em 10%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         text-align: left;
@@ -140,7 +153,6 @@ article p:last-of-type {
     }
     .producto {
         margin: 1em 20%;
-        grid-template-columns: repeat(2, 1fr) auto;
         column-gap: 1em;
         justify-items: start;
     }
@@ -162,6 +174,16 @@ article p:last-of-type {
 
     article {
         margin: 1em 20%;
+        padding-bottom: 2.5em;
+        align-items: center;
+    }
+
+    img {
+        grid-row-end: 6;
+    }
+
+    article ul {
+        grid-column: 2;
     }
 
     a {
