--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,6 +124,7 @@ article p:last-of-type {
         justify-items: center;
         align-items: start;
         font-size: large;
+        row-gap: 5px;
     }
 
     article h2 {
@@ -136,7 +137,7 @@ article p:last-of-type {
 
     img {
         grid-row-start: 2;
-        grid-row-end: 5;
+        grid-row-end: 6;
         max-height: 20em;
     }
 
@@ -179,7 +180,7 @@ article p:last-of-type {
     }
 
     img {
-        grid-row-end: 6;
+        grid-row-end: 7;
     }
 
     article ul {
